<resources>
    <string name="app_name">PenapisanKB</string>
    <string name="p01">Apakah anda mempunyai bayi yang berumur kurang dari 6 bulan dan menyusui secara eksklusif dan tidak mendapat haid selama 6 bulan tersebut?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="p02">Apakah anda pantang senggama sejak haid terakhir atau bersalin?</string>
    <string name="p03">Apakah anda baru melahirkan bayi kurang dari 4 minggu?</string>
    <string name="p04">Apakah haid terakhir dimulai 7 hari terakhir ? (atau 12 hari terakhir bila ingin menggunakan AKDR)</string>
    <string name="p05">Apakah anda mengalami keguguran dalam 7 hari terakhir? (atau 12 hari terakhir bila ingin menggunakan AKDR)</string>
    <string name="p06">Apakah anda menggunkan kontrasepsi secara tepat dan konsisten ?</string>
    <string name="p07">Jenis Alkon yang akan digunakan ?</string>
    <string name="p08">Apakah anda belum mendapatkan haid?</string>
    <string name="p09">Apakah anda menggunakan kontrasepsi secara tepat dan konsisten?</string>
    <string name="pk">Pil Kombinasi</string>
    <string name="sk">Suntik Kombinasi</string>
    <string name="pp">Pil Progestin</string>
    <string name="im">Implan</string>
    <string name="sp">Suntik Progestin</string>
    <string name="akdrc">AKDR Cu</string>
    <string name="akdrp">AKDR Pro</string>
    <string name="tubek">Tubektomi</string>
    <string name="vasek">Vasektomi</string>
    <string name="p11">Apakah merokok?</string>
    <string name="p12">Apakah pernah/ sedang menderita penyakit jantung?</string>
    <string name="p13">Apakah pernah/ sedang menderita tekanan darah tinggi?</string>
    <string name="p14">Apakah pernah mengalami stroke?</string>
    <string name="p15">Apakah sering mengalami nyeri kepala/ migrain?</string>
    <string name="p16">Apakah pernah/ sedang mengalami kanker payudara?</string>
    <string name="p17"><![CDATA[Apakah sedang mengalami penyakit diabetes selama > 20 tahun?]]></string>
    <string name="p18">Apakah sedang mengalami penyakit kandung empedu?</string>
    <string name="p19">Apakah sedang menglami penyakit hepatitis?</string>
    <string name="p110">Apakah sedang mengalami penyakit sirosis?</string>
    <string name="p111">Apakah sedang mengalami penyakit tumor hati?</string>
    <string name="p112">Apakah sedang mengkonsumsi obat TBC?</string>
    <string name="pemeriksaan">Pemeriksaan</string>
    <string name="bp01">Adakah trombosis vena dalam</string>
    <string name="bp02">Tekanan darah meningkat sistolik 140-160 mmHg</string>
    <string name="bp03">Tekanan darah meningkat diastolik 90-100 mmHg</string>
    <string name="bp04"><![CDATA[Tekanan darah sistolik  >160 mmHg]]></string>
    <string name="bp05"><![CDATA[Tekanan darah diastolik > 100 mmHg]]></string>
    <string name="bp06">Adanya tanda servisitis purulen  atau infeksi klamidia atau gonorea</string>
    <string name="sk1">Apakah merokok ≥ 15 batang/ hari?</string>
    <string name="sk2">Apakah pernah/ sedang menderita penyakit jantung?</string>
    <string name="sk3">Apakah pernah/ sedang menderita tekanan darah tinggi?</string>
    <string name="sk4">Apakah pernah mengalami stroke?</string>
    <string name="sk5">Apakah sering mengalami nyeri kepala/ migrain?</string>
    <string name="sk6">Apakah pernah/ sedang mengalami kanker payudara?</string>
    <string name="sk7"><![CDATA[Apakah sedang mengalami penyakit diabetes selama > 20 tahun?]]></string>
    <string name="sk8">Apakah sedang menglami penyakit hepatitis?</string>
    <string name="sk9">Apakah sedang mengalami penyakit sirosis?</string>
    <string name="sk10">Apakah sedang mengalami penyakit tumor hati?</string>
    <string name="pp1">Apakah pernah/ sedang menderita penyakit jantung?</string>
    <string name="pp2">Apakah pernah/ sedang mengalami kanker payudara?</string>
    <string name="pp3">Apakah sedang menglami penyakit hepatitis?</string>
    <string name="pp4">Apakah sedang mengalami penyakit sirosis?</string>
    <string name="pp5">Apakah sedang mengalami penyakit tumor hati?</string>
    <string name="pp6">Apakah sedang mengkonsumsi obat TBC?</string>
    <string name="sp1">Apakah pernah/ sedang menderita penyakit jantung?</string>
    <string name="sp2">Apakah sedang menderita tekanan darah tinggi?</string>
    <string name="sp3">Apakah pernah mengalami stroke?</string>
    <string name="sp4">Apakah sering mengalami nyeri kepala?</string>
    <string name="sp5">Apakah pernah/ sedang mengalami perdarahan pervaginam yang belum dketahui penyebabnya?</string>
    <string name="sp6">Apakah pernah/ sedang mengalami kanker payudara?</string>
    <string name="sp7"><![CDATA[Apakah sedang mengalami penyakit diabetes selama > 20 tahun?]]></string>
    <string name="sp8">Apakah sedang menglami penyakit hepatitis?</string>
    <string name="sp9">Apakah sedang mengalami penyakit sirosis?</string>
    <string name="sp10">Apakah sedang mengalami penyakit tumor hati?</string>
    <string name="implan1">Apakah pernah/ sedang menderita penyakit jantung?</string>
    <string name="implan2">Apakah pernah/ sedang menderita tekanan darah tinggi?</string>
    <string name="implan3">Apakah pernah mengalami stroke?</string>
    <string name="implan4">Apakah sering mengalami nyeri kepala/ migrain?</string>
    <string name="implan5">Apakah pernah/ sedang mengalami perdarahan pervaginam yang belum dketahui penyebabnya?</string>
    <string name="implan6">Apakah pernah/ sedang mengalami kanker payudara?</string>
    <string name="implan7">Apakah sedang menglami penyakit hepatitis?</string>
    <string name="implan8">Apakah sedang mengalami penyakit sirosis?</string>
    <string name="implan9">Apakah sedang mengalami penyakit tumor hati?</string>
    <string name="implan10">Apakah sedang mengkonsumsi obat TBC?</string>
    <string name="akdrcu1">Apakah sedang mengalami sepsis puerperalis?</string>
    <string name="akdrcu2">Apakah sedang mengalami pasca abosrtus septic?</string>
    <string name="akdrcu3">Apakah sedang mengalami sepsis puerperalis?</string>
    <string name="akdrcu4">Apakah pernah/ sedang mengalami perdarahan pervaginam yang belum diketahui penyebabnya?</string>
    <string name="akdrcu5">Apakah sedang mengalami penyakit trofoblas jinak/ ganas?</string>
    <string name="akdrcu6">Apakah sedang mengalami kanker serviks?</string>
    <string name="akdrcu7">Apakah sedang mengalami kanker endometrium atau kanker ovarium?</string>
    <string name="akdrcu8">Apakah sedang mengalami penyakit radang panggul?</string>
    <string name="akdrcu9">Apakah pernah/ sedang mengalami penyakit tuberkolosis pelvis?</string>
    <string name="akdrcu10">Apakah sedang menggunakan obat antiretroviral?</string>
    <string name="akdrpro1">Apakah sedang mengalami sepsis puerperalis?</string>
    <string name="akdrpro2">Apakah sedang mengalami pasca abosrtus septic?</string>
    <string name="akdrpro3">Apakah pernah/ sedang menderita penyakit jantung?</string>
    <string name="akdrpro4">Apakah sering mengalami nyeri kepala/ migrain?</string>
    <string name="akdrpro5">Apakah pernah/ sedang mengalami perdarahan pervaginam yang belum dketahui penyebabnya?</string>
    <string name="akdrpro6">Apakah sedang mengalami penyakit trofoblas jinak/ ganas?</string>
    <string name="akdrpro7">Apakah sedang mengalami kanker serviks?</string>
    <string name="akdrpro8">Apakah pernah/ sedang mengalami kanker payudara?</string>
    <string name="akdrpro9">Apakah sedang mengalami kanker endometrium atau kanker ovarium?</string>
    <string name="akdrpro10">Apakah pernah/ sedang mengalami penyakit tuberkolosis pelvis?</string>
    <string name="akdrpro11">Apakah sedang mengalami penyakit kandung empedu?</string>
    <string name="akdrpro12">Apakah sedang menglami penyakit hepatitis?</string>
    <string name="akdrpro13">Apakah sedang mengalami penyakit sirosis?</string>
    <string name="akdrpro14">Apakah sedang mengalami penyakit tumor hati?</string>
    <string name="akdrpro15">Apakah sedang mengalami penyakit radang panggul?</string>
    <string name="akdrpro16">Apakah pernah/ sedang mengalami penyakit tuberkolosis pelvis?</string>
    <string name="tubektomi1">Apakah sedang mengalami penyakit jantung koroner?</string>
    <string name="tubektomi2">Apakah sedang mengalami endometriosis?</string>
    <string name="tubektomi3">Apakah sedang mengalami kanker serviks?</string>
    <string name="tubektomi4">Apakah pernah/ mengalami perdarahan pervaginam yang belum diketahui penyebabnya?</string>
    <string name="tubektomi5">Apakah mengalami sedang mengalami kanker endometrium atau kanker ovarium?</string>
    <string name="tubektomi6">Apakah sedang mengalami penyakit radang panggul?</string>
    <string name="tubektomi7">Apakah sedang mengalami penyait AIDS?</string>
    <string name="tubektomi8"><![CDATA[Apakah sedang mengalami penyakit diabetes selama > 20 tahun?]]></string>
    <string name="tubektomi9">Apakah sedang mengalami penyakit hipertiroid?</string>
    <string name="tubektomi10">Apakah sedang mengalami penyakit kandung empedu?</string>
    <string name="tubektomi11">Apakah sedang mengalami penyakit sirosis?</string>
    <string name="tubektomi12">Apakah mempunyai penyakit Hepatitis?</string>
    <string name="tubektomi13">Apakah sedang mengalami penyakit paru-paru?</string>
    <string name="bp07">Adanya hernia umbilikalis atau abdominalis</string>
    <string name="vasektomi1">Apakah sedang mengalami penyakit AIDS?</string>
    <string name="vasektomi2">Apakah  mengalami gangguan peredaran darah?</string>
    <string name="vasektomi3">Apakah sedang mengaalami hernia inginalis?</string>
    <string name="bp08"><![CDATA[Tekanan darah sistolik  >160 mmHg?]]></string>
    <string name="bp09"><![CDATA[Tekanan darah diastolik > 100 mmHg?]]></string>
    <string name="lanjut">Lanjut</string>
    <string name="proses">Proses</string>
    <string name="nama_bidan">Nama Bidan</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="register">Register</string>
    <string name="wil_kerja">Wilayah Kerja Puskesmas</string>
    <string name="nama_bunda">Nama</string>
    <string name="umur">Umur</string>
    <string name="nama_suami">Nama Suami</string>
    <string name="nifas">Nifas</string>
    <string name="akseptor_kb_baru">Akseptor KB Baru</string>
    <string name="akseptor_kb_lama">Akseptor KB Lama</string>
    <string name="akseptor_kb_lama_ganti_cara">Akseptor KB Lama Ganti Cara</string>
    <string name="kondisi_anda">Kondisi Saat Ini ?</string>
    <string name="no_rm">No. Rekam Medis</string>
    <string name="sk11">apakah anda menyusui eksklusif?</string>
</resources>
