<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/tv_nama_bidan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/nama_bidan"/>
    <EditText
        android:id="@+id/tv_alamat_lengkap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/alamat_lengkap"/>
    <EditText
        android:id="@+id/spinner_wil_kerja_puskesmas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wil_kerja"
        android:layout_marginBottom="30dp"/>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/register"/>
</LinearLayout>