<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_prior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_p01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/p01"/>

                    <RadioGroup
                        android:id="@+id/rg_p01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <RadioButton
                            android:id="@+id/radiop01_one"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimary"
                            android:text="@string/ya"
                            />

                        <RadioButton
                            android:id="@+id/radiop01_two"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimary"
                            android:text="@string/tidak"
                            />
                    </RadioGroup>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_p02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/p02"/>

                    <RadioGroup
                        android:id="@+id/rg_p02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <RadioButton
                            android:id="@+id/radiop02_one"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimary"
                            android:text="@string/ya"
                            />

                        <RadioButton
                            android:id="@+id/radiop02_two"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimary"
                            android:text="@string/tidak"
                            />
                    </RadioGroup>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_p03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_p03"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/p03"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/rg_p03"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <RadioButton
                            android:id="@+id/radiop03_one"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimary"
                            android:text="@string/ya"
                            />

                        <RadioButton
                            android:id="@+id/radiop03_two"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimary"
                            android:text="@string/tidak"
                            />
                    </RadioGroup>


                </LinearLayout>



            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_decision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="8dp"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/p07"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rg_p07"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <RadioButton
                        android:id="@+id/radiop07_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/sk" />

                    <RadioButton
                        android:id="@+id/radiop07_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/pk"
                        />

                    <RadioButton
                        android:id="@+id/radiop07_three"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/pp"
                        />

                    <RadioButton
                        android:id="@+id/radiop07_five"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/sp"
                        />

                    <RadioButton
                        android:id="@+id/radiop07_six"
                        android:layout_width="match_parent"
                        android:buttonTint="@color/colorPrimary"
                        android:layout_height="wrap_content"
                        android:text="@string/im"
                        />

                    <RadioButton
                        android:id="@+id/radiop07_seven"
                        android:layout_width="match_parent"
                        android:buttonTint="@color/colorPrimary"
                        android:layout_height="wrap_content"
                        android:text="@string/akdrc"
                        />

                    <RadioButton
                        android:id="@+id/radiop07_eight"
                        android:layout_width="match_parent"
                        android:buttonTint="@color/colorPrimary"
                        android:layout_height="wrap_content"
                        android:text="@string/akdrp"
                        />

                    <RadioButton
                        android:id="@+id/radiop07_nine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/tubek"
                        />

                </RadioGroup>


            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_lanjut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@color/colorPrimary"
        android:text="@string/lanjut"/>
    <Button
        android:id="@+id/btn_proses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@color/colorPrimary"
        android:text="@string/proses"/>


</RelativeLayout>